@@ -1,13 +1,14 @@
 package controller.commands;
 
-import controller.BoardCoordinateHelpers;
 import controller.Initializers;
 import io.github.cdimascio.dotenv.Dotenv;
 import model.Faction;
 import model.Game;
-import model.Territory;
 import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.entities.*;
+import net.dv8tion.jda.api.entities.channel.ChannelType;
+import net.dv8tion.jda.api.entities.channel.concrete.Category;
+import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.events.guild.GuildReadyEvent;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
@@ -15,7 +16,7 @@ import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.CommandData;
 import net.dv8tion.jda.api.interactions.commands.build.Commands;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
-import net.dv8tion.jda.internal.utils.Helpers;
+import net.dv8tion.jda.api.utils.FileUpload;
 import org.jetbrains.annotations.NotNull;
 import org.json.JSONArray;
 import org.json.JSONException;
@@ -25,13 +26,13 @@ import javax.imageio.ImageIO;
 import java.awt.*;
 import java.awt.geom.AffineTransform;
 import java.awt.image.BufferedImage;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
-import java.io.PrintWriter;
+import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
 import java.util.*;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -239,10 +240,13 @@ public class CommandManager extends ListenerAdapter {
         Role gameRole = event.getOption("gamerole").getAsRole();
         Role modRole = event.getOption("modrole").getAsRole();
         String name = event.getOption("name").getAsString();
-        event.getGuild().createCategory(name).addPermissionOverride(event.getGuild().getPublicRole(), null, EnumSet.of(Permission.VIEW_CHANNEL))
+        event.getGuild()
+                .createCategory(name)
+                .addPermissionOverride(event.getGuild().getPublicRole(), null, EnumSet.of(Permission.VIEW_CHANNEL))
                 .addPermissionOverride(event.getMember(), EnumSet.of(Permission.VIEW_CHANNEL), null)
                 .addPermissionOverride(modRole, EnumSet.of(Permission.VIEW_CHANNEL), null)
-                .addPermissionOverride(gameRole, EnumSet.of(Permission.VIEW_CHANNEL), null).complete();
+                .addPermissionOverride(gameRole, EnumSet.of(Permission.VIEW_CHANNEL), null)
+                .complete();
 
         Category category = event.getGuild().getCategoriesByName(name, true).get(0);
 
@@ -421,7 +425,7 @@ public class CommandManager extends ListenerAdapter {
             shuffle(deck);
 
         }
-        
+
         String drawn = deck.getString(deck.length() - 1);
         if (gameState.getResources().getInt("turn") == 1 && drawn.equals("Shai-Hulud")) {
             shuffle(deck);
@@ -1267,9 +1271,10 @@ public class CommandManager extends ListenerAdapter {
         h.retrievePast(1).complete();
         List<Message> ml = h.getRetrievedHistory();
         Message.Attachment encoded = ml.get(0).getAttachments().get(0);
-        CompletableFuture<File> future = encoded.getProxy().downloadToFile(new File(Dotenv.configure().load().get("FILEPATH")));
+        CompletableFuture<InputStream> future = encoded.getProxy().download();
         try {
-            Game returnGame = new Game(new String(Base64.getMimeDecoder().decode(new String(Files.readAllBytes(future.get().toPath())))));
+            String gameStateString = new String(future.get().readAllBytes(), StandardCharsets.UTF_8);
+            Game returnGame = new Game(gameStateString);
             List<Role> roles = event.getMember().getRoles();
             List<String> roleNames = new ArrayList<>();
             for (Role role : roles) {
@@ -1291,16 +1296,10 @@ public class CommandManager extends ListenerAdapter {
 
     public void pushGameState(Game gameState, Category game) {
         TextChannel botData = game.getTextChannels().get(0);
-        try {
-            File file = new File("gamestate.txt");
-            PrintWriter pw = new PrintWriter(file, StandardCharsets.UTF_8);
-            pw.println(Base64.getEncoder().encodeToString(gameState.toString().getBytes(StandardCharsets.UTF_8)));
-            pw.close();
-            botData.sendFile(file).complete();
-            file.delete();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        FileUpload fileUpload = FileUpload.fromData(
+                gameState.toString().getBytes(StandardCharsets.UTF_8), "gamestate.txt"
+        );
+        botData.sendFiles(fileUpload).complete();
     }
 
     public void drawGameBoard(SlashCommandInteractionEvent event) {
@@ -1424,11 +1423,21 @@ public class CommandManager extends ListenerAdapter {
 
             }
 
+            ByteArrayOutputStream boardOutputStream = new ByteArrayOutputStream();
+            ImageIO.write(board, "png", boardOutputStream);
+
+            FileUpload boardFileUpload = FileUpload.fromData(boardOutputStream.toByteArray(), "board.png");
+            event.getOption("game")
+                    .getAsChannel()
+                    .asCategory()
+                    .getTextChannels()
+                    .get(2)
+                    .sendFiles(boardFileUpload)
+                    .queue();
+
         } catch (IOException e) {
             e.printStackTrace();
         }
-
-        event.getOption("game").getAsChannel().asCategory().getTextChannels().get(2).sendFile(new File(Dotenv.load().get("IMAGEPATH"))).queue();
     }
 
     public BufferedImage overlay(BufferedImage board, BufferedImage piece, Point coordinates) throws IOException {
@@ -1437,7 +1446,6 @@ public class CommandManager extends ListenerAdapter {
         Graphics2D g = overlay.createGraphics();
         g.drawImage(board, 0, 0, null);
         g.drawImage(piece, coordinates.x - (piece.getWidth()/2), coordinates.y - (piece.getHeight()/2), null);
-        ImageIO.write(overlay, "png", new File(Dotenv.load().get("IMAGEPATH")));
         g.dispose();
 
         return overlay;
